Code cleanup, comments, fixed wrap on forecast cards and header.

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -24,6 +24,7 @@ label {
     flex-direction: row;
     justify-content: space-between;
     align-content: flex-start;
+    flex-wrap: wrap;
 }
 
 #cityandicon {
